sov-modules/sov-modules-macros/tests/derive_on_enum_not_supported.stderr
error: The `ModuleInfo` macro supports structs only.
 --> tests/derive_on_enum_not_supported.rs:6:1
  |
6 | enum TestStruct<C: Context> {
  | ^^^^
