sov-modules/sov-modules-macros/tests/derive_on_enum_not_supported.rs
mod utils;
use sov_modules_macros::ModuleInfo;
use utils::{Context, TestState};

#[derive(ModuleInfo)]
enum TestStruct<C: Context> {
    #[state]
    TestState1(TestState<C::Storage>),

    #[state]
    TestState2(TestState<C::Storage>),
}

fn main() {}
